# log-server

./: Cargo.toml  README.md  build.rs  value_analysis.py
doc/: log_server.doc
src/: lib.rs  main.rs
src/common/: config.rs  mod.rs  safe_socket.rs
src/core/: handlers.rs  mod.rs  servers.rs  writers.rs
src/logger_capnp/: logger_msg.rs  mod.rs
src/network/: grpc_server.rs  mod.rs  tcp_server.rs
src/utils/: helpers.rs  mod.rs
test/: grpc_cli.py  grpc_clis.py  log_service.proto  log_service_pb2.py  log_service_pb2_grpc.py  logger.capnp  tcp_cli.py  tcp_clis.py  zzz_memo
tools/: rust prompt.txt  rust.prompt  software.prompt
